Test fixes for email